syntax = "proto3";
package helloworld;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
  // Units of currency (USD)
  uint32 units = 2;
}

// The response message containing the greetings
message HelloReply {
  string payment_url = 1;
}